<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_display"
        android:gravity="start"
        android:textSize="32sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/all_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_clear_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/times_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/point_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/equals_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_label"
            android:textSize="32sp"
            android:onClick="buttonClick"
            />

    </LinearLayout>

</LinearLayout>